# wonki-task

./: README.md  compose.yaml
server/: .env.template  .gitignore  Dockerfile  README.md  load_sample_data.py  pyproject.toml
server/data/: sample-data.csv
server/wonki_waste_server/: main.py  settings.py
server/wonki_waste_server/api/: deps.py  security.py
server/wonki_waste_server/api/routes/: __init__.py  auth.py  category.py  food_waste.py
server/wonki_waste_server/db/: __init__.py  category.py  food_waste.py  models.py  user.py
web-ui/: Dockerfile  README.md  components.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
web-ui/src/: App.tsx  constants.ts  main.tsx  models.d.ts  router.tsx
web-ui/src/components/: app-sidebar.tsx
web-ui/src/components/custom/: auth-layout.tsx  layout.tsx  sidebar-layout.tsx  sidebar-user.tsx
web-ui/src/components/custom/data-table/: column-header.tsx  index.tsx  pagination.tsx
web-ui/src/components/hooks/: use-auth.ts
web-ui/src/components/ui/: avatar.tsx  breadcrumb.tsx  button.tsx  card.tsx  chart.tsx  dropdown-menu.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tooltip.tsx
web-ui/src/routes/dashboard/: charts.tsx  columns.tsx  hooks.ts  route.tsx
web-ui/src/routes/home/: route.tsx
web-ui/src/routes/login/: login-form.tsx  route.tsx
web-ui/src/routes/signup/: route.tsx  signup-form.tsx
web-ui/src/routes/user/: columns.tsx  data-table.tsx  food-waste-form.tsx  hooks.tsx  pagination.tsx  route.tsx
web-ui/src/utils/: api.ts
